Add contact email to site footer

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   </div>
   <div class="footer">
     <div class="content-wrapper w-container">
-      <div class="footer-text">© dozy app</div>
+      <div class="footer-text">© dozy health - contact me at sam@dozy.health</div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5d037734eb9664d161775f7d" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
