Remove all mentions of "treatment" for legal

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Dozy: fix your insomnia, without drugs</title>
-  <meta content="Dozy is an app that provides drug-free insomnia treatment on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently." name="description">
+  <meta content="Dozy is an app that provides drug-free insomnia care on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently." name="description">
   <meta content="Dozy: fix your insomnia, without drugs" property="og:title">
-  <meta content="Dozy is an app that provides drug-free insomnia treatment on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently." property="og:description">
+  <meta content="Dozy is an app that provides drug-free insomnia care on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently." property="og:description">
   <meta content="Dozy: fix your insomnia, without drugs" property="twitter:title">
-  <meta content="Dozy is an app that provides drug-free insomnia treatment on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently." property="twitter:description">
+  <meta content="Dozy is an app that provides drug-free insomnia care on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -98,14 +98,14 @@
         <div class="w-row">
           <div class="w-col w-col-4">
             <div class="general-container w-clearfix"><img src="images/chekmark_1chekmark.png" width="15" alt="" class="icon features">
-              <div class="general-title">Proven effective treatment</div>
-              <p class="paragraph">Fix your insomnia, permanently, with our CBT-based treatment program. Based on decades of academic research.</p>
+              <div class="general-title">Proven effective care</div>
+              <p class="paragraph">Fix your insomnia, permanently, with our CBT-based sleep program. Based on decades of academic research.</p>
             </div>
           </div>
           <div class="w-col w-col-4">
             <div class="general-container w-clearfix"><img src="images/chekmark_1chekmark.png" width="15" alt="" class="icon features">
               <div class="general-title">Easy to stick with</div>
-              <p class="paragraph">We&#x27;ll proactively follow up with you to keep your treatment on track.</p>
+              <p class="paragraph">We&#x27;ll proactively follow up with you to keep your sleep on track.</p>
             </div>
           </div>
           <div class="w-col w-col-4">
@@ -121,7 +121,7 @@
   <div class="content-section hero-section">
     <div class="content-wrapper w-container">
       <h1 class="h2">Fix your sleep with Cognitive Behavioral Therapy for Insomnia</h1>
-      <p class="paragraph hero">Cognitive Behavioral Therapy for Insomnia, or CBT-i, is the most effective known treatment for insomnia. It&#x27;s based on the principles of Cognitive Behavioral Therapy, and improves sleep by training your brain&#x27;s thought patterns. Treatment usually takes 5-10 weeks and effects are permanent.<br><br>Example techniques include stimulus control therapy (training your brain to associate the bed with sleep), sleep compression therapy (learning how to sleep through the night), and sleep hygiene education (tips &amp; habits for improving sleep quality).<br><br>Dozy guides you through these techniques, helps you implement them at your own pace, and customizes treatment based on your sleep patterns.</p>
+      <p class="paragraph hero">Cognitive Behavioral Therapy for Insomnia, or CBT-i, is the most effective known treatment for insomnia. It&#x27;s based on the principles of Cognitive Behavioral Therapy, and improves sleep by training your brain&#x27;s thought patterns. The program usually takes 5-10 weeks and effects are permanent.<br><br>Example techniques include stimulus control therapy (training your brain to associate the bed with sleep), sleep compression therapy (learning how to sleep through the night), and sleep hygiene education (tips &amp; habits for improving sleep quality).<br><br>Dozy guides you through these techniques, helps you implement them at your own pace, and customizes content based on your sleep patterns.</p>
     </div>
   </div>
   <div class="footer">
