--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Privacy Policy</title>
-  <meta content="Slumber is an app that provides drug-free insomnia treatment on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently. This page contains the privacy policy." name="description">
+  <meta content="Slumber is an app that provides drug-free insomnia care on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently. This page contains the privacy policy." name="description">
   <meta content="Privacy Policy" property="og:title">
-  <meta content="Slumber is an app that provides drug-free insomnia treatment on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently. This page contains the privacy policy." property="og:description">
+  <meta content="Slumber is an app that provides drug-free insomnia care on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently. This page contains the privacy policy." property="og:description">
   <meta content="Privacy Policy" property="twitter:title">
-  <meta content="Slumber is an app that provides drug-free insomnia treatment on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently. This page contains the privacy policy." property="twitter:description">
+  <meta content="Slumber is an app that provides drug-free insomnia care on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently. This page contains the privacy policy." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
