Remove a few "treat"s that were hiding

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Dozy: fix your insomnia, without drugs</title>
-  <meta content="Dozy is an app that provides drug-free insomnia care on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently." name="description">
+  <meta content="Dozy is an app that provides drug-free insomnia care on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to improve sleep, permanently." name="description">
   <meta content="Dozy: fix your insomnia, without drugs" property="og:title">
-  <meta content="Dozy is an app that provides drug-free insomnia care on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently." property="og:description">
+  <meta content="Dozy is an app that provides drug-free insomnia care on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to improve sleep, permanently." property="og:description">
   <meta content="Dozy: fix your insomnia, without drugs" property="twitter:title">
-  <meta content="Dozy is an app that provides drug-free insomnia care on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to treat insomnia permanently." property="twitter:description">
+  <meta content="Dozy is an app that provides drug-free insomnia care on your phone. We use sleep data &amp; verified theraputic techniques (CBT-i) to improve sleep, permanently." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
