--- a/index.html
+++ b/index.html
@@ -83,14 +83,9 @@
         <div class="column w-col w-col-5">
           <h1 class="h1">Fix your insomnia, without drugs</h1>
           <p class="paragraph hero">We use proven therapeutic techniques (CBT-i) to fix your insomnia, permanently. Sign up now for early access.</p>
-          <div id="email-form-mobile" class="form-container w-form">
-            <form id="wf-form-Email-Form-Mobile" name="wf-form-Email-Form-Mobile" data-name="Email Form Mobile" action="https://buttondown.email/api/emails/embed-subscribe/dozy-app" method="post" class="form"><input type="email" id="email-mobile" name="email" data-name="email" placeholder="your@email.com" maxlength="256" required="" class="form-input-box w-input"><input type="submit" value="Sign up" data-wait="Please wait..." class="form-button w-button"></form>
-            <div class="success-message w-form-done">
-              <p class="success-message-text">Thank you! Your submission has been received!</p>
-            </div>
-            <div class="error-message w-form-fail">
-              <p class="error-message-text">Oops! Something went wrong while submitting the form :(</p>
-            </div>
+          <div class='store-btn'>
+            <a href='https://testflight.apple.com/join/2hEIpoD2' class='badge'><img class='store-badge' alt='Dowload it on the App Store' src='./images/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg'/></a>
+            <a href='https://play.google.com/store/apps/details?id=com.dozyhealth.dozy&utm_source=website&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' class='badge'><img class='store-badge' alt='Get it on Google Play' src='./images/googlePlayBadge.svg'/></a>
           </div>
           <div data-ix="slide-up-iphone-on-load" class="iphone-container"><img src="images/screenshotTemplate.png" width="671" srcset="images/screenshotTemplate-p-500.png 500w, images/screenshotTemplate-p-800.png 800w, images/screenshotTemplate-p-1080.png 1080w, images/screenshotTemplate.png 1342w" sizes="100vw" alt="" class="iphone"></div>
         </div>
