Adjust padding on hero text

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="column w-col w-col-5">
           <div data-ix="slide-up-iphone-on-load" class="iphone-container"><img src="images/screenshotTemplate.png" width="671" srcset="images/screenshotTemplate-p-500.png 500w, images/screenshotTemplate-p-800.png 800w, images/screenshotTemplate-p-1080.png 1080w, images/screenshotTemplate.png 1342w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 89vw, (max-width: 991px) 311.65625px, 360px" alt="" class="iphone"></div>
         </div>
-        <div class="column-2 w-col w-col-7">
+        <div class="column-2 w-col w-col-7 hero-text">
           <h1 class="h1">Fix your insomnia, without drugs</h1>
           <p class="paragraph hero">We use proven therapeutic techniques (CBT-i) to fix your insomnia, permanently. Available now in early access.</p>
           <div class='store-btn'>
