Add missing class

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="mobile-col w-row">
-        <div class="column w-col w-col-5">
+        <div class="column w-col w-col-5 hero-text">
           <h1 class="h1">Fix your insomnia, without drugs</h1>
           <p class="paragraph hero">We use proven therapeutic techniques (CBT-i) to fix your insomnia, permanently. Sign up now for early access.</p>
           <div class='store-btn'>
