Add a simple news bar to Dozy site

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
+  <div class="update-bar">
+    <a class="update-bar-link" href="https://buttondown.email/dozy-app/archive/update-on-the-dozy-project/">
+      <p class="update-bar-text">UPDATE ON DOZY: RELAUNCHING SOON</p>
+    </a>
+  </div>
   <div data-ix="initial-appearance-full-page-menu" class="full-page-menu"><a href="#" data-ix="close-full-page-menu-on-click" class="close-container w-inline-block"><img src="images/close_1close.png" width="18" alt="" class="close"></a>
     <div class="content-wrapper menu w-container">
       <div class="menu-title-container">
